Finally finished everything on desktop browser, only attempting to fix navbar on mobile

--- a/react-resume/src/index.css
+++ b/react-resume/src/index.css
@@ -11,6 +11,9 @@
   .navbar{
     flex-direction: column;
   }
+  .navbar p{
+    padding: 5px;
+  }
 }
 p{
   color: blue;
